# monarchmoney-typed

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  shell.nix
.github/workflows/: release.yml
monarchmoney-typed/: __init__.py  typed_monarch_money.py
monarchmoney_typed/: __init__.py  models.py  monarchmoney_typed.py
test/: conftest.py  test_models.py
test/fixtures/: get_subscription_details.json
typedmonarchmoney/: __init__.py  icon.py  models.py  monarchmoney_typed.py  patch.py
