[tool.poetry]
name = "monarchmoney_typed"
version = "0.1.2"
description = "A Typed wrapper around Monarch Money"
authors = ["Jeff Stein <jeffstein@gmail.com>"]
readme = "README.md"
include = ["monarchmoney_typed/py.typed"]

[tool.poetry.dependencies]
python = "^3.12"
monarchmoney = "^0.1.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
python-dotenv = "^1.0.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


