[project]
name = "typedmonarchmoney"
version = "0.7.0"
description = "A Typed wrapper around Monarch Money"
authors = [{name = "Jeff Stein", email = "jeffstein@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "monarchmoneycommunity==1.3.0",
    "rich>=10.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.4",
    "python-dotenv>=1.0.1",
    "pre-commit>=3.8.0",
    "coverage>=7.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typedmonarchmoney"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".direnv",
    ".venv",
    ".env",
    ".idea",
    ".mm",
    "__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["test"]
